--- a/html/b.html
+++ b/html/b.html
@@ -20,7 +20,7 @@
 <div class="bd">
     <figure>
         <blockquote cite="https://www.huxley.net/bnw/four.html">
-            <p>Words can be like X-rays, if you use them properly—they’ll go through anything. You read and you’re
+            <p>this is p element in blockquote anything. You read and you’re
                 pierced.</p>
         </blockquote>
         <figcaption>—this is figcaption, <cite>this is cite</cite></figcaption>
